--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,12 +53,12 @@
     <UnityVersion>2020.3.25f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\Scroll.cs" />
     <Compile Include="Assets\Scripts\MouseLook.cs" />
     <Compile Include="Assets\Scripts\PrayerBeads.cs" />
     <Compile Include="Assets\Scripts\RotatePickup.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\MonsterAI.cs" />
+    <Compile Include="Assets\Scripts\Salt.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\ProjectSettings\ProjectVersion.txt" />
